<resources>
    <string name="app_name">Good Night</string>

    <bool name="quiet">false</bool>
    <string name="quiet_title">Quiet</string>
    <string name="quiet_summary">When enabled, calls and alerts that arrive will be silenced, and a moon icon will appear in the status bar.</string>

    <bool name="scheduled">false</bool>
    <string name="scheduled_title">Scheduled</string>
    <string name="schedule_from">22:00</string>
    <string name="schedule_from_title">From</string>
    <string name="schedule_to">07:00</string>
    <string name="schedule_to_title">To</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>

    <string name="allow_calls_from">-2</string>
    <string name="allow_calls_from_title">Allow Calls From</string>
    <string-array name="allow_calls_from_labels">
        <item>No One</item>
        <item>Favorites</item>
        <item>All Contacts</item>
        <item>Everyone</item>
    </string-array>
    <string-array name="allow_calls_from_values">
        <item>-1</item>
        <item>-2</item>
        <item>-3</item>
        <item>-4</item>
    </string-array>
    <string name="allow_calls_from_no_one">No One\nIncoming calls from everyone will be silenced.</string>
    <string name="allow_calls_from_favorites">Favorites\nIncoming calls from your favorites will not be silenced.</string>
    <string name="allow_calls_from_all_contacts">All Contacts\nIncoming calls from your contacts will not be silenced.</string>
    <string name="allow_calls_from_everyone">Everyone\nNo incoming calls will be silenced.</string>

    <bool name="repeated">false</bool>
    <string name="repeated_calls_title">Repeated Calls</string>
    <string name="repeated_calls_summary">When enabled, a second call from the same person within three minutes will not be silenced.</string>

    <string name="notification_title">Good Night</string>
    <string name="notification_text">Ringer is now silent</string>
    <string name="toast_message">Good Night!</string>
</resources>
